--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
         "postinstall": "fumadocs-mdx"
     },
     "dependencies": {
+        "framer-motion": "^12.23.24",
+        "fumadocs-core": "15.7.10",
+        "fumadocs-mdx": "11.9.0",
+        "fumadocs-ui": "15.7.10",
+        "lucide-react": "^0.545.0",
         "next": "15.5.2",
         "react": "^19.1.1",
-        "react-dom": "^19.1.1",
-        "fumadocs-ui": "15.7.10",
-        "fumadocs-core": "15.7.10",
-        "fumadocs-mdx": "11.9.0"
+        "react-dom": "^19.1.1"
     },
     "devDependencies": {
         "@types/node": "24.3.1",
