--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "postinstall": "fumadocs-mdx"
     },
     "dependencies": {
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "framer-motion": "^12.23.24",
         "fumadocs-core": "15.7.10",
         "fumadocs-mdx": "11.9.0",
@@ -16,18 +18,20 @@
         "lucide-react": "^0.545.0",
         "next": "15.5.2",
         "react": "^19.1.1",
-        "react-dom": "^19.1.1"
+        "react-dom": "^19.1.1",
+        "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.13",
+        "@types/mdx": "^2.0.13",
         "@types/node": "24.3.1",
         "@types/react": "^19.1.12",
         "@types/react-dom": "^19.1.9",
-        "typescript": "^5.9.2",
-        "@types/mdx": "^2.0.13",
-        "@tailwindcss/postcss": "^4.1.13",
-        "tailwindcss": "^4.1.13",
-        "postcss": "^8.5.6",
         "eslint": "^8",
-        "eslint-config-next": "15.5.2"
+        "eslint-config-next": "15.5.2",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.13",
+        "tw-animate-css": "^1.4.0",
+        "typescript": "^5.9.2"
     }
 }
